@@ -3,9 +3,10 @@ package com.mrbysco.enchantableblocks.block;
 import com.mrbysco.enchantableblocks.block.blockentity.EnchantedBedBlockEntity;
 import com.mrbysco.enchantableblocks.block.blockentity.IEnchantable;
 import com.mrbysco.enchantableblocks.registry.ModEnchantments;
+import com.mrbysco.enchantableblocks.util.EnchantmentUtil;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.Holder;
 import net.minecraft.network.chat.Component;
-import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResult;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
@@ -14,12 +15,12 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.DyeColor;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.enchantment.Enchantment;
 import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraft.world.level.BlockGetter;
 import net.minecraft.world.level.Explosion;
 import net.minecraft.world.level.ExplosionDamageCalculator;
 import net.minecraft.world.level.Level;
-import net.minecraft.world.level.LevelReader;
 import net.minecraft.world.level.block.BedBlock;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.entity.BlockEntity;
@@ -53,16 +54,7 @@ public class EnchantedBedBlock extends BedBlock {
 	}
 
 	@Override
-	public ItemStack getCloneItemStack(LevelReader level, BlockPos pos, BlockState state) {
-		ItemStack originalStack = new ItemStack(originalBlock.get());
-		if (level.getBlockEntity(pos) instanceof IEnchantable blockEntity && blockEntity.getEnchantmentsTag() != null) {
-			originalStack.getOrCreateTag().put("Enchantments", blockEntity.getEnchantmentsTag());
-		}
-		return originalStack;
-	}
-
-	@Override
-	public InteractionResult use(BlockState state, Level level, BlockPos pos, Player player, InteractionHand hand, BlockHitResult hitResult) {
+	protected InteractionResult useWithoutItem(BlockState state, Level level, BlockPos pos, Player player, BlockHitResult pHitResult) {
 		if (level.isClientSide) {
 			return InteractionResult.CONSUME;
 		} else {
@@ -77,7 +69,7 @@ public class EnchantedBedBlock extends BedBlock {
 			boolean explodes = false;
 			BlockEntity blockEntity = level.getBlockEntity(pos);
 			if (blockEntity instanceof IEnchantable enchantable) {
-				explodes = enchantable.hasEnchantment(ModEnchantments.INTENTIONAL_GAME_DESIGN.get());
+				explodes = enchantable.hasEnchantment(EnchantmentUtil.getEnchantmentHolder(blockEntity, ModEnchantments.INTENTIONAL_GAME_DESIGN));
 			}
 			if (!canSetSpawn(level) || explodes) {
 				level.removeBlock(pos, false);
@@ -112,7 +104,7 @@ public class EnchantedBedBlock extends BedBlock {
 		if (villagers.isEmpty()) {
 			return false;
 		} else {
-			villagers.get(0).stopSleeping();
+			villagers.getFirst().stopSleeping();
 			return true;
 		}
 	}
@@ -122,8 +114,9 @@ public class EnchantedBedBlock extends BedBlock {
 		float explosionResistance = super.getExplosionResistance(state, level, pos, explosion);
 		BlockEntity blockentity = level.getBlockEntity(pos);
 		if (blockentity instanceof IEnchantable enchantable) {
-			if (enchantable.hasEnchantment(Enchantments.BLAST_PROTECTION)) {
-				int enchantmentLevel = enchantable.getEnchantmentLevel(Enchantments.BLAST_PROTECTION);
+			Holder<Enchantment> blastHolder = EnchantmentUtil.getEnchantmentHolder(blockentity, Enchantments.BLAST_PROTECTION);
+			if (enchantable.hasEnchantment(blastHolder)) {
+				int enchantmentLevel = enchantable.getEnchantmentLevel(blastHolder);
 				explosionResistance *= ((enchantmentLevel + 1) * 30);
 			}
 		}
@@ -134,25 +127,25 @@ public class EnchantedBedBlock extends BedBlock {
 	public List<ItemStack> getDrops(BlockState state, LootParams.Builder params) {
 		BlockEntity blockentity = params.getParameter(LootContextParams.BLOCK_ENTITY);
 		if (blockentity instanceof IEnchantable enchantable) {
-			if (enchantable.hasEnchantment(Enchantments.VANISHING_CURSE)) {
+			if (enchantable.hasEnchantment(EnchantmentUtil.getEnchantmentHolder(blockentity, Enchantments.VANISHING_CURSE))) {
 				return List.of();
 			}
 		}
 		return super.getDrops(state, params);
 	}
 
-	@Override
-	public void setPlacedBy(Level level, BlockPos pos, BlockState state, LivingEntity placer, ItemStack stack) {
-		super.setPlacedBy(level, pos, state, placer, stack);
-		BlockEntity blockentity = level.getBlockEntity(pos);
-		if (!level.isClientSide && blockentity instanceof IEnchantable enchantable) {
-			enchantable.setEnchantments(stack.getEnchantmentTags());
-		}
-
-		BlockPos blockpos = pos.relative(state.getValue(FACING));
-		BlockEntity blockentity2 = level.getBlockEntity(blockpos);
-		if (!level.isClientSide && blockentity2 instanceof IEnchantable enchantable) {
-			enchantable.setEnchantments(stack.getEnchantmentTags());
-		}
-	}
+//	@Override
+//	public void setPlacedBy(Level level, BlockPos pos, BlockState state, LivingEntity placer, ItemStack stack) {
+//		super.setPlacedBy(level, pos, state, placer, stack);
+//		BlockEntity blockentity = level.getBlockEntity(pos);
+//		if (!level.isClientSide && blockentity instanceof IEnchantable enchantable) {
+//			enchantable.setEnchantments(stack.getEnchantmentTags());
+//		}
+//
+//		BlockPos blockpos = pos.relative(state.getValue(FACING));
+//		BlockEntity blockentity2 = level.getBlockEntity(blockpos);
+//		if (!level.isClientSide && blockentity2 instanceof IEnchantable enchantable) {
+//			enchantable.setEnchantments(stack.getEnchantmentTags());
+//		}
+//	}
 }
