@@ -1,24 +1,29 @@
 package com.mrbysco.enchantableblocks.block.blockentity;
 
 import com.google.common.collect.Lists;
+import com.mojang.serialization.Dynamic;
 import com.mrbysco.enchantableblocks.menu.EnchantedBeaconMenu;
 import com.mrbysco.enchantableblocks.mixin.BeaconBeamSectionAccessor;
 import com.mrbysco.enchantableblocks.registry.ModEnchantments;
 import com.mrbysco.enchantableblocks.registry.ModRegistry;
+import com.mrbysco.enchantableblocks.util.EnchantmentUtil;
 import com.mrbysco.enchantableblocks.util.TagHelper;
-import it.unimi.dsi.fastutil.objects.Object2IntMap;
-import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
 import net.minecraft.advancements.CriteriaTriggers;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.Holder;
+import net.minecraft.core.HolderLookup;
+import net.minecraft.core.component.DataComponentMap;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
-import net.minecraft.nbt.Tag;
+import net.minecraft.nbt.NbtOps;
 import net.minecraft.network.Connection;
 import net.minecraft.network.protocol.game.ClientboundBlockEntityDataPacket;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.tags.BlockTags;
 import net.minecraft.tags.TagKey;
+import net.minecraft.util.FastColor;
 import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.entity.player.Inventory;
@@ -26,7 +31,7 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.inventory.ContainerLevelAccess;
 import net.minecraft.world.item.enchantment.Enchantment;
-import net.minecraft.world.item.enchantment.EnchantmentHelper;
+import net.minecraft.world.item.enchantment.ItemEnchantments;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.entity.BaseContainerBlockEntity;
@@ -37,14 +42,12 @@ import net.minecraft.world.level.levelgen.Heightmap;
 import net.minecraft.world.phys.AABB;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 
 public class EnchantedBeaconBlockEntity extends BeaconBlockEntity implements IEnchantable {
 	protected boolean hideGlint;
 	protected ListTag enchantmentTag = null;
-	protected final Object2IntMap<Enchantment> enchantments = new Object2IntOpenHashMap<>();
+	protected ItemEnchantments enchantments = ItemEnchantments.EMPTY;
 
 	public EnchantedBeaconBlockEntity(BlockPos pos, BlockState state) {
 		super(pos, state);
@@ -68,21 +71,23 @@ public class EnchantedBeaconBlockEntity extends BeaconBlockEntity implements IEn
 			blockpos = new BlockPos(xPos, blockEntity.lastCheckY + 1, zPos);
 		}
 
-		BeaconBlockEntity.BeaconBeamSection beamSection = blockEntity.checkingBeamSections.isEmpty() ? null : blockEntity.checkingBeamSections.get(blockEntity.checkingBeamSections.size() - 1);
+		BeaconBlockEntity.BeaconBeamSection beamSection = blockEntity.checkingBeamSections.isEmpty() ? null : blockEntity.checkingBeamSections.getLast();
 		int height = level.getHeight(Heightmap.Types.WORLD_SURFACE, xPos, zPos);
 
 		for (int i1 = 0; i1 < 10 && blockpos.getY() <= height; ++i1) {
 			BlockState blockstate = level.getBlockState(blockpos);
-			float[] colorMultiplier = blockstate.getBeaconColorMultiplier(level, blockpos, pos);
+			Integer colorMultiplier = blockstate.getBeaconColorMultiplier(level, blockpos, pos);
 			if (colorMultiplier != null) {
 				if (blockEntity.checkingBeamSections.size() <= 1) {
 					beamSection = new BeaconBlockEntity.BeaconBeamSection(colorMultiplier);
 					blockEntity.checkingBeamSections.add(beamSection);
 				} else if (beamSection != null) {
-					if (Arrays.equals(colorMultiplier, beamSection.getColor())) {
+					if (colorMultiplier == beamSection.getColor()) {
 						((BeaconBeamSectionAccessor) beamSection).invokeIncreaseHeight();
 					} else {
-						beamSection = new BeaconBlockEntity.BeaconBeamSection(new float[]{(beamSection.getColor()[0] + colorMultiplier[0]) / 2.0F, (beamSection.getColor()[1] + colorMultiplier[1]) / 2.0F, (beamSection.getColor()[2] + colorMultiplier[2]) / 2.0F});
+						beamSection = new BeaconBlockEntity.BeaconBeamSection(
+								FastColor.ARGB32.average(beamSection.getColor(), colorMultiplier)
+						);
 						blockEntity.checkingBeamSections.add(beamSection);
 					}
 				}
@@ -108,6 +113,7 @@ public class EnchantedBeaconBlockEntity extends BeaconBlockEntity implements IEn
 
 			if (blockEntity.levels > 0 && !blockEntity.beamSections.isEmpty()) {
 				applyEffects(blockEntity, level, pos, blockEntity.levels, blockEntity.primaryPower, blockEntity.secondaryPower);
+
 				playSound(level, pos, SoundEvents.BEACON_AMBIENT);
 			}
 		}
@@ -159,13 +165,14 @@ public class EnchantedBeaconBlockEntity extends BeaconBlockEntity implements IEn
 		return i;
 	}
 
-	private static void applyEffects(EnchantedBeaconBlockEntity blockEntity, Level level, BlockPos pos, int levels, @Nullable MobEffect primary, @Nullable MobEffect secondary) {
+	private static void applyEffects(EnchantedBeaconBlockEntity blockEntity, Level level, BlockPos pos, int levels, Holder<MobEffect> primary, Holder<MobEffect> secondary) {
 		if (!level.isClientSide && primary != null) {
-			boolean visible = !blockEntity.hasEnchantment(ModEnchantments.CONCEALED.get());
+			boolean visible = !blockEntity.hasEnchantment(EnchantmentUtil.getEnchantmentHolder(level, ModEnchantments.CONCEALED));
 
 			double range = levels * 10 + 10;
-			if (blockEntity.hasEnchantment(ModEnchantments.RANGED.get())) {
-				int enchantmentLevel = blockEntity.getEnchantmentLevel(ModEnchantments.RANGED.get());
+			Holder<Enchantment> rangedHolder = EnchantmentUtil.getEnchantmentHolder(level, ModEnchantments.RANGED);
+			if (blockEntity.hasEnchantment(rangedHolder)) {
+				int enchantmentLevel = blockEntity.getEnchantmentLevel(rangedHolder);
 				//Adjust the range based on the level of the enchantment
 				range *= 1 + (enchantmentLevel * 0.5);
 			}
@@ -200,64 +207,45 @@ public class EnchantedBeaconBlockEntity extends BeaconBlockEntity implements IEn
 	}
 
 	@Override
-	public Map<Enchantment, Integer> getEnchantments() {
+	public ItemEnchantments getEnchantments() {
 		return enchantments;
 	}
 
 	@Override
-	public boolean hasEnchantment(Enchantment enchantment) {
-		return this.enchantments.containsKey(enchantment);
+	public boolean hasEnchantment(Holder<Enchantment> enchantment) {
+		return this.enchantments.getLevel(enchantment) > 0;
 	}
 
 	@Override
-	public int getEnchantmentLevel(Enchantment enchantment) {
+	public int getEnchantmentLevel(Holder<Enchantment> enchantment) {
 		if (this.hasEnchantment(enchantment))
-			return this.enchantments.get(enchantment);
+			return this.enchantments.getLevel(enchantment);
 		return -1;
 	}
 
 	@Override
 	public boolean hasEnchantment(TagKey<Enchantment> enchantmentTag) {
-		for (Enchantment enchantment : this.enchantments.keySet()) {
-			if (TagHelper.matchesTag(enchantment, enchantmentTag)) {
+		for (Holder<Enchantment> enchantment : this.enchantments.keySet()) {
+			if (TagHelper.matchesTag(this.level.registryAccess(), enchantment, enchantmentTag)) {
 				return true;
 			}
 		}
-		return this.enchantments.containsKey(enchantmentTag);
+		return false;
 	}
 
 	@Override
 	public int getEnchantmentLevel(TagKey<Enchantment> enchantmentTag) {
-		for (Enchantment enchantment : this.enchantments.keySet()) {
-			if (TagHelper.matchesTag(enchantment, enchantmentTag)) {
-				return this.enchantments.get(enchantment);
+		for (Holder<Enchantment> enchantment : this.enchantments.keySet()) {
+			if (TagHelper.matchesTag(this.level.registryAccess(), enchantment, enchantmentTag)) {
+				return this.enchantments.getLevel(enchantment);
 			}
 		}
 		return -1;
 	}
 
 	@Override
-	public void setEnchantments(ListTag enchantmentTags) {
-		this.enchantmentTag = enchantmentTags;
-		this.updateEnchantmentMap();
-	}
-
-	@Override
-	public ListTag getEnchantmentsTag() {
-		return this.enchantmentTag;
-	}
-
-	@Override
-	public void updateEnchantmentMap() {
-		this.enchantments.clear();
-		if (this.enchantmentTag != null) {
-			EnchantmentHelper.deserializeEnchantments(this.enchantmentTag).forEach((enchantment, integer) -> {
-				if (enchantment != null) {
-					this.enchantments.put(enchantment, integer);
-				}
-			});
-			this.hideGlint = this.hasEnchantment(ModEnchantments.GLINTLESS.get());
-		}
+	public void setEnchantments(ItemEnchantments enchantments) {
+		this.enchantments = enchantments;
 	}
 
 	@Override
@@ -266,19 +254,47 @@ public class EnchantedBeaconBlockEntity extends BeaconBlockEntity implements IEn
 	}
 
 	@Override
-	public void load(CompoundTag tag) {
-		super.load(tag);
+	protected void loadAdditional(CompoundTag tag, HolderLookup.Provider registries) {
+		super.loadAdditional(tag, registries);
 		if (tag.contains("Enchantments")) {
-			this.enchantmentTag = tag.getList("Enchantments", Tag.TAG_COMPOUND);
-			this.updateEnchantmentMap();
+			ItemEnchantments.CODEC
+					.parse(new Dynamic<>(NbtOps.INSTANCE, tag.get("Enchantments")))
+					.resultOrPartial()
+					.ifPresent(enchantments -> this.enchantments = enchantments);
+			this.enchantments = ItemEnchantments.CODEC.parse(NbtOps.INSTANCE, tag.get("Enchantments")).result().orElse(null);
 		}
 	}
 
 	@Override
-	protected void saveAdditional(CompoundTag tag) {
-		super.saveAdditional(tag);
-		if (this.enchantmentTag != null)
-			tag.put("Enchantments", enchantmentTag);
+	protected void saveAdditional(CompoundTag tag, HolderLookup.Provider registries) {
+		super.saveAdditional(tag, registries);
+		if (this.enchantments != null) {
+			ItemEnchantments.CODEC
+					.encodeStart(NbtOps.INSTANCE, this.enchantments)
+					.resultOrPartial()
+					.ifPresent(enchantments -> tag.put("Enchantments", enchantments));
+		}
+	}
+
+	@Override
+	protected void applyImplicitComponents(DataComponentInput componentInput) {
+		super.applyImplicitComponents(componentInput);
+		ItemEnchantments enchantments = componentInput.get(DataComponents.ENCHANTMENTS);
+		if (enchantments != null) {
+			this.enchantments = enchantments;
+		}
+	}
+
+	@Override
+	protected void collectImplicitComponents(DataComponentMap.Builder pComponents) {
+		super.collectImplicitComponents(pComponents);
+		pComponents.set(DataComponents.ENCHANTMENTS, this.getEnchantments());
+	}
+
+	@Override
+	public void removeComponentsFromTag(CompoundTag tag) {
+		super.removeComponentsFromTag(tag);
+
 	}
 
 	//Sync stuff
@@ -288,10 +304,10 @@ public class EnchantedBeaconBlockEntity extends BeaconBlockEntity implements IEn
 	}
 
 	@Override
-	public void onDataPacket(Connection net, ClientboundBlockEntityDataPacket packet) {
+	public void onDataPacket(Connection net, ClientboundBlockEntityDataPacket packet, HolderLookup.Provider registries) {
 		var tag = packet.getTag();
 		if (tag != null) {
-			handleUpdateTag(tag);
+			handleUpdateTag(tag, registries);
 
 			BlockState state = level.getBlockState(worldPosition);
 			level.sendBlockUpdated(worldPosition, state, state, 3);
@@ -308,19 +324,19 @@ public class EnchantedBeaconBlockEntity extends BeaconBlockEntity implements IEn
 	}
 
 	@Override
-	public CompoundTag getUpdateTag() {
-		return saveWithoutMetadata();
+	public CompoundTag getUpdateTag(HolderLookup.Provider registries) {
+		return saveWithoutMetadata(registries);
 	}
 
 	@Override
-	public void handleUpdateTag(CompoundTag tag) {
-		load(tag);
+	public void handleUpdateTag(CompoundTag tag, HolderLookup.Provider registries) {
+		loadAdditional(tag, registries);
 	}
 
 	@Override
 	public CompoundTag getPersistentData() {
 		CompoundTag tag = new CompoundTag();
-		this.saveAdditional(tag);
+		this.saveAdditional(tag, this.level.registryAccess());
 		return tag;
 	}
 }
